2007-Dec-10  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a crash problem with ConfigureLlaOut, which was caused by
	  uninitialized variables.

2007-Dec-10  Heikki Junnila <hjunnila@users.sf.net>
	* Modified LLA plugin to compile and start up.

2007-Dec-10  Heikki Junnila <hjunnila@users.sf.net>
	* Modified dummy out plugin to look like usbdmxout and dmx4linuxout.

2007-Dec-10  Heikki Junnila <hjunnila@users.sf.net>
	* Changed "Universe" to "Output" in DMX4Linux plugin's infoText().
	* Added an array of errors for each usbdmx device in usbdmx plugin.
	  These errors are displayed in infoText().
	* Renamed "Output line" to "Output" in usbdmx plugin.

2007-Dec-09  Heikki Junnila <hjunnila@users.sf.net>
	* Revised the (output)plugin interface a bit by removing saveSettings,
	  loadSettings, isOpen, setConfigDir and contextMenu methods.
	* Modified USBDMX and DMX4Linux plugins to use the revised plugin
	  interface and changed their configuration dialogs to actually not
	  configure anything, but test output.
	* TODO: LLA plugin does not work/compile now...

2007-Dec-05  Heikki Junnila <hjunnila@users.sf.net>
	* Changed Monitor's channel label color to QColorGroup::midlight().

2007-Dec-05  Heikki Junnila <hjunnila@users.sf.net>
	* Unified most QMessageBoxes to use questions when appropriate and
	  the essence of the question as the title instead of plain "QLC".
	* Removed VCDockSliderProperties as obsolete.
	* Adjusted some dialog sizes
	* Adjusted some dialog buttons' etc. sizes.

2007-Dec-05  Heikki Junnila <hjunnila@users.sf.net>
	* Modified EFXEditor, FCEditor & ChaserEditor constructors to
	  comply with QT conventions (parent first).
	* Modified the UIs for the editors to have slightly more size-adaptive
	  buttons.

2007-Dec-04  Heikki Junnila <hjunnila@users.sf.net>
	* Changed ConsoleChannel's buttons' maximum sizes back to 32767.
	* Changed "Preset" to "Capability" in ConsoleChannel.

2007-Dec-04  Heikki Junnila <hjunnila@users.sf.net>